force-app/main/default/objects/TerritoryName__c/fields/Program_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Program_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Regional Vice President assigned to this Territory. Added -03-2022 to consolidate Territory records</description>
    <inlineHelpText>The Regional Vice President assigned to this Territory</inlineHelpText>
    <label>Program Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Names1</relationshipName>
    <type>Lookup</type>
</CustomField>