force-app/main/default/objects/TerritoryName__c/fields/Regional_VP__c.field-meta.xml
<CustomField>
    <fullName>Regional_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Regional Vice President assigned to this Territory. Added 03-2022 to consolidate Territory records</description>
    <inlineHelpText>The Regional Vice President assigned to this Territory</inlineHelpText>
    <label>Regional VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Names</relationshipName>
    <type>Lookup</type>
</CustomField>