force-app/main/default/objects/TerritoryName__c/fields/Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Rep_ID__c</fullName>
    <label>Rep ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>