force-app/main/default/objects/TerritoryName__c/fields/Sage_ID__c.field-meta.xml
<CustomField>
    <fullName>Sage_ID__c</fullName>
    <label>Sage ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>