force-app/main/default/objects/TerritoryName__c/fields/Show_on_Contact_Page__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Contact_Page__c</fullName>
    <label>Show on Contact Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>