force-app/main/default/objects/TerritoryName__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Territory_ID__c</columns>
    <columns>Region__c</columns>
    <columns>NAME</columns>
    <columns>Territory_Description__c</columns>
    <columns>Name__c</columns>
    <columns>Position__c</columns>
    <columns>Rep_ID__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>